test/test_examples/syntactic_examples/syntax_error/error_statement_23.zig
// Syntax error: empty inicializing expression in variable definition

const ifj = @import("ifj24.zig"); 

pub fn main() void {
    const hello : i32 =;
}